# ogre3dnext-clean-project

./: CMakeLists.txt  build.bat  build_ogre_Visual_Studio_17_2022_x64.bat  cmd_with_env.bat  env-config.bat  ogre_build.bat  ogre_build_Visual_Studio_17_2022_x64.bat  readme.md
cfg/: plugins.cfg  resources.cfg
src/: main.cpp
